# procon26

./: .gitignore  .gitmodules  Action.hpp  Answer.cpp  Answer.hpp  Beam  BeamMain.cpp  BitBeam  BitBeamMain.cpp  BitBoard.cpp  BitBoard.hpp  BitBoardTest  BitTile.cpp  BitTile.hpp  Board.cpp  Board.hpp  CMakeLists.txt  CacheTile.hpp  ExtendBoard.hpp  Home.cpp  Home.hpp  JinMain.cpp  LinkedTile.cpp  LinkedTile.hpp  README.md  Square.hpp  Tile.cpp  Tile.hpp  TuningBitBoard.cpp.bk  TuningBitBoard.hpp.bk  getAns  getAnswer.cpp  getAnswers.cpp  getAnswers.h  piece_count.py  test.txt
Takumi/: Beam.cpp  Beam.hpp  BitBeam.cpp  BitBeam.hpp  BitBestBeam.cpp  Eval.hpp  Jin.cpp  Jin.hpp  Takumi.hpp  Test.cpp  Test.hpp  Util.hpp  ZobristHash.hpp  ZobristHashGen.cpp  a.out
Test/: BitBoardInteractive.cpp  BitBoardTest.cpp  a.out  inbounds.cpp
ans/: q10_470.txt  q10_474.txt  q10_478.txt  q11_0.txt  q11_0_.txt  q11_0__.txt  q11_2.txt  q11_4.txt  q13_0_117.txt  q13_0___.txt  q13_5.txt  q13_9.txt  q14_13.txt  q14_49.txt  q15_60.txt  q15_63.txt  q15_68.txt  q15_87.txt  q16_0.txt  q16_1.txt  q16_8.txt  q17_0.txt  q17_1.txt  q1_0.txt  q1_11.txt  q1_15.txt  q1_42.txt  q1_53.txt  q2_0.txt  q2_0_.txt  q2_0_114.txt  q2_0_124.txt  q2_0_127.txt  q2_0__.txt  q3_0.txt  q3_0_.txt  q3_0__.txt  q3_92.txt  q4_0.txt  q4_1.txt  (+23 more)
details/: Home.cpp  Square.cpp
